# meshoptimizer

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .prettierrc  .travis.yml  CMakeCache.txt  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  PYPI.md  README.md  USERS.md  _config.yml  appveyor.yml  azure-pipelines.yml  cmake_install.cmake  codecov.yml  meshoptimizerConfig.cmake  meshoptimizerConfig.cmake.in  meshoptimizerConfigVersion.cmake  v1.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/ISSUE_TEMPLATES/: config.yaml
.github/workflows/: build.yml  ccpp.yml  cifuzz.yml  main.yml  python-publish.yml  release.yml
_includes/: head-custom.html
demo/: GLTFLoader.js  THREE.EXT_meshopt_compression.js  THREE.MESHOPT_compression.js  ansi.c  babylon.EXT_meshopt_compression.js  babylon.MESHOPT_compression.js  clusterlod.cpp  clusterlod.h  demo.html  glview.cpp  index.html  lodviewer.cpp  main.cpp  meshletdec.slang  miniz.cpp  miniz.h  nanite.cpp  objparser.cpp  objparser.h  objparser.hpp  pirate.glb  pirate.optmesh  remesh.html  simplify.html  tests.cpp  tiny_obj_loader.h  vcachetester.cpp
gltf/: README.md  animation.cpp  basisenc.cpp  basislib.cpp  basistoktx.cpp  cli.js  encodebasis.cpp  encodewebp.cpp  fileio.cpp  fuzz.dict  gltfpack.cpp  gltfpack.h  image.cpp  json.cpp  library.js  material.cpp  mesh.cpp  module.js  node.cpp  package.json  parsegltf.cpp  parselib.cpp  parseobj.cpp  stream.cpp  wasistubs.cpp  write.cpp
gltf/node/: README.md  package.json
js/: OptMeshLoader.js  README.md  THREE.EXT_meshopt_compression.js  babylon.EXT_meshopt_compression.js  benchmark.js  decoder-post.js  decoder-src.js  decoder.js  decoder.wasm  index.d.ts  index.js  index.module.d.ts  index.module.js  meshopt_clusterizer.d.ts  meshopt_clusterizer.js  meshopt_clusterizer.module.d.ts  meshopt_clusterizer.module.js  meshopt_clusterizer.test.js  meshopt_decoder.cjs  meshopt_decoder.d.ts  meshopt_decoder.js  meshopt_decoder.mjs  meshopt_decoder.module.d.ts  meshopt_decoder.module.js  meshopt_decoder.test.js  meshopt_decoder_reference.js  meshopt_encoder.d.ts  meshopt_encoder.js  meshopt_encoder.module.d.ts  meshopt_encoder.module.js  meshopt_encoder.test.js  meshopt_simplifier.d.ts  meshopt_simplifier.js  meshopt_simplifier.module.d.ts  meshopt_simplifier.module.js  meshopt_simplifier.test.js  meshopt_tangents.d.ts  meshopt_tangents.js  meshopt_tangents.test.js  package.json  (+1 more)
python/: MANIFEST.in  README.md  module.template.cpp  pyproject.toml  setup.py
python/bindings/: module.template.cpp
python/meshoptimizer/: __init__.py  _loader.py  decoder.py  encoder.py  optimizer.py  simplifier.py  utils.py
python/python/src/: module.cpp
python/tests/: __init__.py  run_tests.py  test_encoding.py  test_mesh_integrity.py  test_optimization.py  test_simplification.py
src/: allocator.cpp  clusterizer.cpp  indexcodec.cpp  indexgenerator.cpp  main.cpp  math.hpp  meshletbuilder.cpp  meshletcodec.cpp  meshletutils.cpp  meshoptimizer.h  meshoptimizer.hpp  meshoptimizer_internal.h  opacitymap.cpp  overdrawanalyzer.cpp  overdrawoptimizer.cpp  overdrawoptimizertipsify.cpp  overdrawoptimizertipsify.hpp  partition.cpp  posttloptimizertipsify.cpp  posttloptimizertipsify.hpp  posttloptimizertomf.cpp  posttloptimizertomf.hpp  posttransformanalyzer.cpp  posttransformoptimizer.cpp  pretloptimizer.cpp  pretloptimizer.hpp  pretransformanalyzer.cpp  pretransformoptimizer.cpp  quantization.cpp  rasterizer.cpp  remesher.cpp  simplifier.cpp  spatialorder.cpp  stripifier.cpp  tangentspace.cpp  vcacheanalyzer.cpp  vcacheanalyzer.hpp  vcacheoptimizer.cpp  vertexcodec.cpp  vertexfilter.cpp  (+4 more)
tools/: OptMeshLoader.js  basistoktx.cpp  basisu_format.h  cgltf.h  clodgltf.cpp  clusterfuzz.cpp  codecbench.cpp  codecfuzz.cpp  codectest.cpp  fast_obj.h  gltfbasis.py  gltfpack.cpp  ktx2_format.h  lodviewer.cpp  meshencoder.cpp  movemask.smt2  objloader.cpp  objparser.cpp  opacitymapfuzz.cpp  optimizefuzz.cpp  simplifyfuzz.cpp  vcachetester.cpp  vcachetuner.cpp  wasmpack.py  wasmstubs.cpp
